infrastructure/kubernetes/manifests/intranet/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: intranet
  labels:
    app.kubernetes.io/part-of: shinbee-intranet
